--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~11.2.8",
     "@ckeditor/ckeditor5-angular": "^2.0.1",
     "@ckeditor/ckeditor5-build-classic": "^27.0.0",
+    "@ckeditor/ckeditor5-build-decoupled-document": "^27.0.0",
     "bootstrap": "^5.0.0-beta3",
     "bulma": "^0.9.2",
     "rxjs": "~6.6.0",
